# minialfa

./: .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  flash.gdb  flash.wsl.sh  openocd.cfg  readme.md  run_on_host.sh
.cargo/: config.toml
.gitea/workflows/: ci.yaml
src/: controller.rs  display.rs  i2c_sensor.rs  klapan.rs  linear_regression.rs  main.rs  support.rs  thyracont_sensor.rs
