[package]
name = "minialfa"
version = "0.1.0"
authors = ["ololoshka2871 <SweetTreasure@2ch.hk>"]
edition = "2021"
resolver = "2"

[profile.release]
lto = true
debug = true # Symbols are nice and they don't increase the size on Flash
opt-level = "s"

[profile.dev]
lto = false
debug = true # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[features]
pio = ["esp-idf-sys/pio"]

[dependencies]
esp-idf-sys = { version = "0.31.9", features = ["binstart"] }
esp-idf-svc = "0.42"

num = { version = "0.4", default-features = false, features = ["alloc"] }
anyhow = "1"

embedded-svc = { version = "0.22", default-features = false }
embedded-hal = "0.2"
esp-idf-hal = "0.38.1"

crossbeam = "0.8"

# display
display-interface = "0.4"
display-interface-spi = "0.4"
ssd1309 = "0.3"
embedded-graphics = "0.7" 

# encoder
rotary-encoder-embedded = "0.2.0"

[build-dependencies]
embuild = "0.30"
anyhow = "1"
